# agent_llm_emotions

./: .env  CURRENT_STATE.md  README.md  analyze_outputs_llm.py  crewai_documentation.md  logs.txt  medical_case_analysis.md  medical_case_analysis_backup.md  medical_case_analysis_team1_case1572_stage1.md  project_milestone.md  pyproject.toml  run_full_experiment.py  run_team.py
cases/: case_list.csv
output/: analysis_summary_llm.csv  output_summary.csv  result_team1_case1572_stage1_openai_gpt-4o-mini.md  result_team1_case1572_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team1_case1573_stage1_openai_gpt-4o-mini.md  result_team1_case1573_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team1_case1583_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team1_case1584_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team1_case1585_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team1_case1586_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team1_case1587_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team1_case1589_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team1_case1590_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team2_case1572_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team2_case1573_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team2_case1583_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team2_case1584_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team2_case1585_stage2_anthropic_claude-3-5-haiku-20241022.md  result_team2_case1586_stage2_anthropic_claude-3-5-haiku-20241022.md  (+5 more)
(+23 files in other folders)
