[project]
name = "agent_board_v2"
version = "0.1.0"
description = "agent_board_v2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
agent_board_v2 = "agent_board_v2.main:run"
run_crew = "agent_board_v2.main:run"
train = "agent_board_v2.main:train"
replay = "agent_board_v2.main:replay"
test = "agent_board_v2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
